--- a/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.html
+++ b/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.html
@@ -13,96 +13,60 @@
 <div class="competition-detail" *ngIf="!isLoading && !error">
   <!-- En-tête de la compétition -->
   <div class="competition-header" *ngIf="competition">
-    <h1>{{ competition.nom }}</h1>
+    <h1>Compétition de {{ competition.place }}</h1>
     <div class="competition-info">
-      <p><strong>Lieu:</strong> {{ competition.lieu }}</p>
-      <p><strong>Date:</strong> {{ competition.dateDebut | date:'dd/MM/yyyy' }} - {{ competition.dateFin | date:'dd/MM/yyyy' }}</p>
+      <p><strong>Niveau:</strong> {{ competition.level }}</p>
+      <p><strong>Date:</strong> {{ competition.startDate | date:'dd/MM/yyyy' }} - {{ competition.endDate | date:'dd/MM/yyyy' }}</p>
     </div>
   </div>
 
-  <!-- Tableau des résultats -->
-  <div class="results-table-container" *ngIf="participants.length > 0">
-    <table mat-table [dataSource]="participants" class="results-table">
-      <!-- Position -->
-      <ng-container matColumnDef="position">
-        <th mat-header-cell *matHeaderCellDef>Pos.</th>
-        <td mat-cell *matCellDef="let participant; let i = index">{{ i + 1 }}</td>
-      </ng-container>
+  <!-- Onglets pour les catégories -->
+  <mat-tab-group *ngIf="categories.length">
+    <mat-tab *ngFor="let categorie of categories" [label]="categorie.name">
+      <div class="tab-content">
+        <!-- Tableau des participants -->
+        <div class="results-table-container">
+          <table mat-table [dataSource]="categorie.participants" class="results-table">
+            <!-- Position -->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef>Pos.</th>
+              <td mat-cell *matCellDef="let participant; let i = index">{{ i + 1 }}</td>
+            </ng-container>
 
-      <!-- Dossard -->
-      <ng-container matColumnDef="dossard">
-        <th mat-header-cell *matHeaderCellDef>Dossard</th>
-        <td mat-cell *matCellDef="let participant">{{ participant.dossard }}</td>
-      </ng-container>
+            <!-- Dossard -->
+            <ng-container matColumnDef="bibNb">
+              <th mat-header-cell *matHeaderCellDef>Dossard</th>
+              <td mat-cell *matCellDef="let participant">{{ participant.bibNb }}</td>
+            </ng-container>
 
-      <!-- Nom -->
-      <ng-container matColumnDef="nom">
-        <th mat-header-cell *matHeaderCellDef>Participant</th>
-        <td mat-cell *matCellDef="let participant">{{ participant.prenom }} {{ participant.nom }}</td>
-      </ng-container>
+            <!-- Nom -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Participant</th>
+              <td mat-cell *matCellDef="let participant">{{ participant.name }}</td>
+            </ng-container>
 
-      <!-- Club -->
-      <ng-container matColumnDef="club">
-        <th mat-header-cell *matHeaderCellDef>Club</th>
-        <td mat-cell *matCellDef="let participant">{{ participant.club }}</td>
-      </ng-container>
+            <!-- Club -->
+            <ng-container matColumnDef="club">
+              <th mat-header-cell *matHeaderCellDef>Club</th>
+              <td mat-cell *matCellDef="let participant">{{ participant.club }}</td>
+            </ng-container>
 
-      <!-- Qualification Run 1 -->
-      <ng-container matColumnDef="qualification_run1">
-        <th mat-header-cell *matHeaderCellDef>Q1</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'QUALIFICATION', 1) }}</td>
-      </ng-container>
+            <!-- Runs -->
+            <ng-container matColumnDef="runs">
+              <th mat-header-cell *matHeaderCellDef>Runs</th>
+              <td mat-cell *matCellDef="let participant">{{ getParticipantRuns(participant) }}</td>
+            </ng-container>
 
-      <!-- Qualification Run 2 -->
-      <ng-container matColumnDef="qualification_run2">
-        <th mat-header-cell *matHeaderCellDef>Q2</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'QUALIFICATION', 2) }}</td>
-      </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 
-      <!-- Qualification Total -->
-      <ng-container matColumnDef="qualification_total">
-        <th mat-header-cell *matHeaderCellDef>Total Q</th>
-        <td mat-cell *matCellDef="let participant">{{ getPhaseTotal(participant, 'QUALIFICATION') }}</td>
-      </ng-container>
-
-      <!-- Demi-finale Run 1 -->
-      <ng-container matColumnDef="demiFinale_run1">
-        <th mat-header-cell *matHeaderCellDef>1/2 R1</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'DEMI_FINALE', 1) }}</td>
-      </ng-container>
-
-      <!-- Demi-finale Run 2 -->
-      <ng-container matColumnDef="demiFinale_run2">
-        <th mat-header-cell *matHeaderCellDef>1/2 R2</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'DEMI_FINALE', 2) }}</td>
-      </ng-container>
-
-      <!-- Finale Run 1 -->
-      <ng-container matColumnDef="finale_run1">
-        <th mat-header-cell *matHeaderCellDef>F R1</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'FINALE', 1) }}</td>
-      </ng-container>
-
-      <!-- Finale Run 2 -->
-      <ng-container matColumnDef="finale_run2">
-        <th mat-header-cell *matHeaderCellDef>F R2</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'FINALE', 2) }}</td>
-      </ng-container>
-
-      <!-- Finale Run 3 -->
-      <ng-container matColumnDef="finale_run3">
-        <th mat-header-cell *matHeaderCellDef>F R3</th>
-        <td mat-cell *matCellDef="let participant">{{ getRunValue(participant, 'FINALE', 3) }}</td>
-      </ng-container>
-
-      <!-- En-têtes et lignes -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
-
-  <!-- Message si aucun participant -->
-  <div class="no-data-message" *ngIf="participants.length === 0">
-    <p>Aucun participant n'est inscrit à cette compétition pour le moment.</p>
+  <!-- Message si aucune catégorie -->
+  <div class="no-data-message" *ngIf="competition && categories.length === 0">
+    <p>Aucune catégorie trouvée pour cette compétition</p>
   </div>
 </div> 
