--- a/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.scss
+++ b/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.scss
@@ -60,11 +60,11 @@
         width: 60px;
       }
 
-      .mat-column-dossard {
+      .mat-column-bibNb {
         width: 80px;
       }
 
-      .mat-column-nom {
+      .mat-column-name {
         text-align: left;
         min-width: 200px;
       }
@@ -72,6 +72,11 @@
       .mat-column-club {
         text-align: left;
         min-width: 150px;
+      }
+
+      .mat-column-runs {
+        text-align: left;
+        min-width: 300px;
       }
 
       // Styles pour les scores
@@ -91,6 +96,23 @@
 
   .tab-content {
     padding: 20px 0;
+  }
+
+  ::ng-deep {
+    .mat-mdc-tab-body-wrapper {
+      padding: 20px 0;
+    }
+
+    .mat-mdc-tab-group {
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+    }
+
+    .mat-mdc-tab-header {
+      margin-bottom: 20px;
+    }
   }
 
   table {
