--- a/kflow_front/src/app/pages/competitions/competition-form/competition-form.component.html
+++ b/kflow_front/src/app/pages/competitions/competition-form/competition-form.component.html
@@ -1,5 +1,11 @@
 <div class="competition-form-container">
-  <h2>Créer une nouvelle compétition</h2>
+  <div class="header-actions">
+    <h2>Créer une nouvelle compétition</h2>
+    <button mat-raised-button color="accent" (click)="goToImport()">
+      <mat-icon>upload_file</mat-icon>
+      Importer une compétition
+    </button>
+  </div>
 
   <form [formGroup]="competitionForm" (ngSubmit)="onSubmit()" class="competition-form">
     <mat-form-field appearance="fill">
