--- a/kflow_front/src/styles.scss
+++ b/kflow_front/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@use '@angular/material' as mat;
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 html, body { 
   height: 100%;
@@ -9,23 +9,4 @@ html, body {
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: #f5f5f5;
-}
-
-// Import des thèmes Material
-@include mat.core();
-
-$primary-palette: mat.define-palette(mat.$indigo-palette);
-$accent-palette: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$warn-palette: mat.define-palette(mat.$red-palette);
-
-$theme: mat.define-light-theme((
-  color: (
-    primary: $primary-palette,
-    accent: $accent-palette,
-    warn: $warn-palette,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0,
-));
-
-@include mat.all-component-themes($theme); 
+} 
