--- a/kflow_front/src/app/app.component.html
+++ b/kflow_front/src/app/app.component.html
@@ -183,9 +183,9 @@
   <app-navbar></app-navbar>
 
   <!-- Main Content -->
-  <div class="content-container">
+  <main>
     <router-outlet></router-outlet>
-  </div>
+  </main>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
