--- a/kflow_front/src/app/app.component.scss
+++ b/kflow_front/src/app/app.component.scss
@@ -1,7 +1,14 @@
 .app-container {
+  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+}
+
+main {
+  flex: 1;
+  padding: 20px;
+  overflow-y: auto;
 }
 
 .content-container {
