--- a/kflow_front/src/app/components/navbar/navbar.component.scss
+++ b/kflow_front/src/app/components/navbar/navbar.component.scss
@@ -12,12 +12,7 @@ mat-sidenav {
 }
 
 .active {
-  background-color: rgba(63, 81, 181, 0.1) !important;
-  color: #3f51b5;
-
-  mat-icon {
-    color: #3f51b5;
-  }
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 mat-toolbar {
@@ -31,8 +26,9 @@ mat-toolbar {
     border-radius: 4px;
     font-weight: 500;
     letter-spacing: 1px;
-    margin-left: 8px;
+    margin-left: 1rem;
     transition: background-color 0.3s ease;
+    font-size: 1.5rem;
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.2);
@@ -51,7 +47,7 @@ mat-sidenav-content {
 }
 
 .sidenav {
-  width: 200px;
+  width: 250px;
   background-color: #f5f5f5;
   border-right: 1px solid #e0e0e0;
 }
@@ -89,12 +85,13 @@ mat-nav-list {
 
 .content-container {
   flex: 1;
-  padding: 20px;
+  padding: 1rem;
   box-sizing: border-box;
   background-color: #fff;
   position: relative;
   display: flex;
   flex-direction: column;
+  margin-bottom: 60px;
 }
 
 app-footer {
