--- a/kflow_front/src/app/pages/competitions/competitions.component.html
+++ b/kflow_front/src/app/pages/competitions/competitions.component.html
@@ -17,40 +17,26 @@
     <button mat-raised-button color="primary" (click)="loadCompetitions()">Réessayer</button>
   </div>
 
-  <table mat-table [dataSource]="competitions" class="mat-elevation-z8" *ngIf="!isLoading && !error && competitions.length > 0">
-    <ng-container matColumnDef="place">
-      <th mat-header-cell *matHeaderCellDef>Lieu</th>
-      <td mat-cell *matCellDef="let competition">{{competition.place}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let competition">{{competition.date | date:'dd/MM/yyyy'}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="level">
-      <th mat-header-cell *matHeaderCellDef>Niveau</th>
-      <td mat-cell *matCellDef="let competition">{{competition.level}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let competition">
-        <button mat-icon-button color="primary" [routerLink]="['/competitions', competition.id]" matTooltip="Voir les détails">
-          <mat-icon>visibility</mat-icon>
+  <div class="competitions-grid">
+    <mat-card *ngFor="let competition of competitions" class="competition-card">
+      <mat-card-header>
+        <mat-card-title>{{ competition.place }}</mat-card-title>
+        <mat-card-subtitle>{{ competition.level }}</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{ competition.categories.length }} catégories</p>
+        <p>Du {{ competition.startDate | date:'dd/MM/yyyy' }} au {{ competition.endDate | date:'dd/MM/yyyy' }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button [routerLink]="['/competitions', competition.id]">
+          <mat-icon>visibility</mat-icon> Voir
         </button>
-        <button mat-icon-button color="accent" [routerLink]="['/competitions', competition.id, 'edit']" matTooltip="Modifier">
-          <mat-icon>edit</mat-icon>
+        <button mat-button color="warn" (click)="deleteCompetition(competition.id)">
+          <mat-icon>delete</mat-icon> Supprimer
         </button>
-        <button mat-icon-button color="warn" (click)="deleteCompetition(competition.id)" matTooltip="Supprimer">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      </mat-card-actions>
+    </mat-card>
+  </div>
 
   <div *ngIf="!isLoading && !error && competitions.length === 0" class="no-data">
     <p>Aucune compétition n'a été créée</p>
