--- a/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.html
+++ b/kflow_front/src/app/pages/competitions/competition-detail/competition-detail.component.html
@@ -22,7 +22,7 @@
         <mat-card *ngFor="let category of competition.categories || []" class="category-card">
           <mat-card-header>
             <mat-card-title>{{ category.name }}</mat-card-title>
-            <mat-card-subtitle>{{ (category.participants || []).length }} participantis</mat-card-subtitle>
+            <mat-card-subtitle>participants: {{ (category.participants || []).length }}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-content>
             <mat-accordion>
