--- a/kflow_front/src/app/components/navbar/navbar.component.html
+++ b/kflow_front/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,12 @@
       [mode]="'side'"
       [opened]="true">
     <mat-nav-list>
+      @if (connectedUser) {
+        <a mat-list-item routerLink="/profile" routerLinkActive="active">
+          <mat-icon>account_circle</mat-icon>
+          <span>{{connectedUser.name}}</span>
+        </a>
+      }
       <a mat-list-item routerLink="/home" routerLinkActive="active">
         <mat-icon>home</mat-icon>
         <span>Accueil</span>
@@ -12,9 +18,24 @@
         <span>Compétitions</span>
       </a>
       <a mat-list-item routerLink="/users" routerLinkActive="active">
-        <mat-icon>manage_accounts</mat-icon>
+        <mat-icon>people</mat-icon>
         <span>Utilisateurs</span>
       </a>
+      @if (connectedUser) {
+        <a mat-list-item (click)="logout()">
+          <mat-icon>logout</mat-icon>
+          <span>Déconnexion</span>
+        </a>
+      } @else {
+        <a mat-list-item routerLink="/login" routerLinkActive="active">
+          <mat-icon>login</mat-icon>
+          <span>Connexion</span>
+        </a>
+        <a mat-list-item routerLink="/register" routerLinkActive="active">
+          <mat-icon>person_add</mat-icon>
+          <span>Inscription</span>
+        </a>
+      }
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
