--- a/kflow_front/src/app/pages/competitions/competition-import/competition-import.component.html
+++ b/kflow_front/src/app/pages/competitions/competition-import/competition-import.component.html
@@ -49,7 +49,9 @@
     </mat-card-actions>
 
     <mat-card-footer>
-      <mat-progress-bar *ngIf="isValidating" mode="indeterminate"></mat-progress-bar>
+      @if (isValidating) {
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      }
     </mat-card-footer>
   </mat-card>
 </div> 
