--- a/kflow_front/src/app/pages/users/users.component.html
+++ b/kflow_front/src/app/pages/users/users.component.html
@@ -34,7 +34,7 @@
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let user">
         <button mat-icon-button color="primary">
-          <mat-icon>edit</mat-icon>
+          <mat-icon>editer</mat-icon>
         </button>
         <button mat-icon-button color="warn">
           <mat-icon>delete</mat-icon>
