commit pour travailler sur lautre pc

--- a/kflow_front/src/app/components/login/login.component.html
+++ b/kflow_front/src/app/components/login/login.component.html
@@ -17,6 +17,7 @@
     </div>
 
     <div class="actions">
+      <button mat-button mat-raised-button mat-dialog-close type="button" (click)="redirectToRegister()">Créer un compte</button>
       <button mat-raised-button color="primary">Valider</button>
     </div>
   </form>
