--- a/kflow_front/src/app/components/footer/footer.component.html
+++ b/kflow_front/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer" [class.visible]="isVisible">
-  <div class="footer-content">
+  <!-- <div class="footer-content">
     <div class="footer-section">
       <h3>Contact</h3>
       <p><mat-icon>phone</mat-icon> +33 (0)1 23 45 67 89</p>
@@ -22,5 +22,5 @@
   </div>
   <div class="footer-bottom">
     <p>&copy; 2024 KFlow. Tous droits réservés.</p>
-  </div>
+  </div> -->
 </footer> 
